<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <ImageView android:layout_height="120dp"
        android:layout_width="wrap_content"
        android:src="@drawable/sign_up"
        android:paddingTop="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_emailID"
        android:gravity="center_horizontal"
        app:errorEnabled="true"

        >

        <EditText
            android:layout_width="190dp"
            android:layout_height="41dp"
            android:id="@+id/email_RegisterActivityID"
            android:layout_marginTop="20dp"
            android:height="41dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/green_light" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_firstNameID"
        android:gravity="center_horizontal"
        app:errorEnabled="true"
        >
        <EditText android:layout_height="41dp"
            android:layout_width="190dp"
            android:id="@+id/firstname_RegisterActivityID"
            android:height="41dp"
            android:hint="FirstName"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/green_light"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_lastNameID"
        android:gravity="center_horizontal"
        app:errorEnabled="true"
        >
        <EditText android:layout_height="41dp"
            android:layout_width="190dp"
            android:id="@+id/lastname_RegisterActivityID"
            android:height="41dp"
            android:hint="LastName"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/green_light"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:gravity="center_horizontal"
        >
        <EditText android:layout_height="41dp"
            android:layout_width="190dp"
            android:height="41dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/password_RegisterActivityID"
            android:textColorHint="@color/green_light"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:gravity="center_horizontal"
        android:padding="1dp"
        >
        <com.google.android.material.textfield.TextInputEditText android:layout_height="41dp"
            android:layout_width="190dp"
            android:height="41dp"
            android:hint="@string/reenter_password"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:inputType="textPassword"
            android:id="@+id/reenterpassword_RegisterActivityID"
            android:textColorHint="@color/green_light"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:gravity="center_horizontal"
        >
    <EditText
        android:layout_width="190dp"
        android:layout_height="41dp"
        android:id="@+id/phoneNumber_RegisterActivityID"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:hint="@string/phonenumber"
        android:textColorHint="@color/green_light"
        />
    </com.google.android.material.textfield.TextInputLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    >
    <TextView android:layout_height="80dp"
        android:layout_width="wrap_content"
        android:text="Gender"
        android:textSize="22dp"
        android:layout_marginLeft="30dp"
        />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:paddingTop="1dp"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textColor="#000000"
                android:paddingLeft="3dp"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textColorHint="@color/green_light"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:paddingLeft="3dp"
                android:paddingStart="3dp" />
        </RadioGroup>
</LinearLayout>
    <Button android:layout_height="41dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:id="@+id/register_signupID"
        android:background="@drawable/button_shape"
        />
</LinearLayout>